test/message/esm_display_syntax_error_module.out
file:///*/test/fixtures/es-module-loaders/syntax-error.mjs:2
await async () => 0;
^^^^^
SyntaxError: Unexpected reserved word
    at ModuleLoader._loadModule (internal/modules/esm/module_loader.js:*:*)
